tests/good/test532.tig
type iarr = array of int

var a := iarr[range(10,20)] of range(0,5)

var dummy := print_int(a[range(0,4)+a[range(0,4)]])