tests/bad/bad59.tig
type iarr = array of int

var a := iarr[range(10,20)] of 0

var dummy := print_int(a[10])